--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.6"
